--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
 
     //location
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    //CircleImage
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
