--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     //location
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
+    //GeoFire
+    implementation 'com.firebase:geofire-android:3.1.0'
+
     //CircleImage
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
